[package]
name = "reth-bench-compare"
version = "1.5.0"
edition = "2021"
rust-version = "1.86"
license = "MIT OR Apache-2.0"
homepage = "https://paradigmxyz.github.io/reth"
repository = "https://github.com/paradigmxyz/reth"
description = "Automated reth benchmark comparison between git references"
authors = ["Reth Contributors"]

[[bin]]
name = "reth-bench-compare"
path = "src/main.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4", features = ["derive", "env"] }
eyre = "0.6"

# Async runtime
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.0"

# Serialization (still needed for JSON handling)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Process management
ctrlc = "3.4"

# Time handling
chrono = "0.4"

# Path manipulation
shellexpand = "3.0.0"
shlex = "1.3"

# CSV handling for results comparison
csv = "1.3"

# Reth dependencies for shared types and utilities
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", rev = "dddde9eff9" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth.git", rev = "dddde9eff9" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth.git", rev = "dddde9eff9" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth.git", rev = "dddde9eff9" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", rev = "dddde9eff9" }

# Alloy for RPC communication
alloy-provider = { version = "1.0.17", default-features = false, features = ["reqwest", "reqwest-rustls-tls"] }
alloy-rpc-types-eth = "1.0.17"
alloy-primitives = "1.0.17"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
